@@ -1,5 +1,14 @@
 2021-05-12  Chris Dumez  <cdumez@apple.com>
 
+        Unreviewed follow-up to r277376.
+
+        Fix bad early return in NotificationPermissionRequestManager::didReceiveNotificationPermissionDecision().
+
+        * WebProcess/Notifications/NotificationPermissionRequestManager.cpp:
+        (WebKit::NotificationPermissionRequestManager::didReceiveNotificationPermissionDecision):
+
+2021-05-12  Chris Dumez  <cdumez@apple.com>
+
         Queue notification permission requests for the same origin on WebKit side
         https://bugs.webkit.org/show_bug.cgi?id=225701
         <rdar://76804977>
